# py-fmg

./: .dockerignore  .env.docker  .env.example  .gitignore  02-08-2025-2_AM.md  02-08-2025-2_PM.md  BLOB_SPREADING_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CURRENT_STATUS.md  DEVOOPS.md  Dockerfile  FMG_RIVER_ANALYSIS_REPORT.md  PLAN.md  PYTHON_PORT_RANDOM_ANALYSIS.md  Pre-compact summary.md  QUICKSTART.md  README.md  README_3D.md  SESSION_SUMMARY_2025-07-28.md  STATUS.md  STATUS_END_30th.md  TASKS.md  THEBIGREPORT.md  TILE_EVENTS_MIGRATION.md  VORONOI.md  VORONOI_DISCREPANCY.md  analyst_feedback.md  analyze_fmg_pattern.py  analyze_fmg_points.py  analyze_fmg_spreading.py  analyze_template_from_heights.py  calculate_spreading_depth.py  check_spreading_steps.py  compare_prng_output.py  compare_spreading.py  compat.md  compatability_test.md  convert_base64_to_image.py  debug_atoll.py  (+78 more)
debug/: analyze_regraph_filtering.py  audit_random_consumption.py  hill_command_analysis.py  multiply_command_debug.py  template_execution_debugger.py  test_final_heights.py  test_grid_to_pack_conversion.py  test_implicit_uint8_conversion.py  test_lim_and_rounding.py  test_mask_operation.py  test_ocean_cells.py  test_post_processing_uint8.py  test_rand_function.py  test_random_sequence.py  test_regraph_distribution.py  test_specific_hill.py  test_uint8_overflow.py  trace_fmg_logic.py  trace_max_height.py  trace_max_height_location.py
debug_archive/: IMPLEMENTATION_STATUS.md  analyze_fmg_heights.py  analyze_spreading_math.py  browser_debug_script.js  check_connectivity.py  continue  debug_blob_power_precision.py  debug_cell_count_verification.py  debug_heightmap_detailed.py  debug_packing_analysis.py  debug_packing_comparison.py  debug_precise_blob_power.py  debug_template_execution.py  fmg_analysis.md  fmg_debug_patch.js  fmg_heights.npy  heights.json  playwright_trace_fmg.py  serve_debug_patch.py  test_decay_rate.py  test_first_hill.py  test_fractious_template.py  test_heightmap_debug.py  test_heightmap_integration.py  test_mask_operation.py  test_multiply_operation.py  test_original_map.py  trace_blob_spread.py
docs/: API.md  IMPLEMENTED_FIXES_SUMMARY.md  POSTGIS_INTEGRATION.md  PRNG_AUDIT_SUMMARY.md  THEBIGREPORT.md  analyst_feedback.md  heightmap_compatibility_findings.md  prng_audit.md
examples/: climate_demo.py  heightmap_demo.py  heightmap_simple_demo.py  voronoi_improvements_demo.py
k8s/: nginx.yaml  postgis-db.yaml  py-fmg-deployment.yaml
py_fmg/: __init__.py  config.py
tests/: __init__.py  blob_algo.md  console-export-2025-7-27_14-30-6.txt  (+34 more)
(+48 files in other folders)
