[tool.poetry]
name = "py-fmg"
version = "0.1.0"
description = "Python port of Fantasy Map Generator (FMG)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.14.2"
geopandas = "^0.14.1"
shapely = "^2.0.2"
rasterio = "^1.3.9"
numpy = "^1.24.3"
scipy = "^1.11.4"
noise = "^1.2.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
markovify = "^0.9.4"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.28.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
ipdb = "^0.13.13"
playwright = "^1.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"