[tool.poetry]
name = "py-fmg"
version = "0.1.0"
description = "Python port of Azgaars Fantasy Map Generator (FMG)"
authors = ["barrulus <me@barrulus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.116.1"
# geoalchemy2 = "0.14.2"
# geopandas = "0.14.1"
# rasterio = "1.3.9"
# numpy = "1.24.3"
# scipy = "1.11.4"
noise = "1.2.2"
markovify = "0.9.4"
matplotlib = "3.10.3"
sqlalchemy = "^2.0.42"
psycopg2-binary = "^2.9.10"
shapely = "^2.1.1"
isort = "^5.13.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
structlog = "^25.4.0"

numpy = "^2.3.2"
scipy = "^1.16.1"
geopandas = "^1.1.1"
geoalchemy2 = "^0.18.0"
rasterio = "^1.4.3"
scikit-learn = "^1.7.1"

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
ipdb = "0.13.13"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
ruff = "^0.12.7"

[tool.poetry.group.security.dependencies]
pip-audit = "2.7.0"
bandit = "1.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "S"]
